# Light-Client-Gateway

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WEEKLY_PROGRESS_LOGS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android-ci.yml  deploy-website.yml  release.yml
.plans/: 2026-02-18-ui-redesign-design.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
deployment/: Dockerfile.gateway  Dockerfile.light-client  README.md  docker-compose.yml  setup-vps.sh
docs/: GATEWAY_IMPLEMENTATION_SPEC.md  M1_SPEC.md  M2_SPEC.md
docs/plans/: 2026-02-19-m2-nervos-dao-design.md  2026-02-23-m2-nervos-dao-implementation.md  2026-02-25-room-cache-phase2-design.md  2026-02-25-room-cache-phase2-implementation.md
docs/superpowers/plans/: 2026-03-30-bugfix-v1.4.1.md  2026-04-13-key-storage-redesign-phase1.md  2026-04-13-key-storage-redesign-phase2.md  2026-04-13-m3-multi-wallet-fix.md
docs/superpowers/specs/: 2026-03-30-bugfix-v1.4.1-design.md  2026-04-13-key-storage-redesign-design.md  2026-04-13-m3-multi-wallet-fix-design.md  (+1 more)
fdroid/: com.rjnr.pocketnode.yml
scripts/batch-send/: package-lock.json  package.json  send.mjs
server/: .env.example  Cargo.toml  README.md
server/src/: address.rs  error.rs  handlers.rs  light_client.rs  main.rs  models.rs
website/: claim.html  index.html  privacy.html  vercel.json  waitlist.html
website/apps-script/: claim-handler.js
(+212 files in other folders)
